<resources>
    <string name="app_name">GlitchImage</string>
    <string name="share_app">Share App</string>
    <string name="remove">Remove</string>
    <string name="edit">Edit</string>
    <string name="share_image">Share Image..</string>
    <string name="share_video">Share Video..</string>
    <string name="more">More</string>
    <string name="rate_app">Rate App</string>
    <string name="please_wait">Please Wait</string>
    <string name="error_permission">Please provide permissions to use the application..</string>
    <string name="via_pick_image">Via</string>
    <string name="effect_image">Effects Image</string>
    <string name="move_fingure">Move Fingure On Image To See Effects</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="exit">Exit</string>
    <string name="alert">Warning</string>
    <string name="ques_save">Do you want save image before exiting the screen?</string>
    <string name="ques_save2">Do you want save video before exiting the screen?</string>
    <string name="ques_remove">Do you want remove file?</string>
    <string name="ques_exit">Do you want exit application?</string>
    <string name="save_success">Save image successful with path: </string>
    <string name="have_error">There was an error, please try again..</string>
    <string name="empty_file_list">Empty file list</string>
    <string name="preview">Photo View</string>n
    <string name="start_time">00:00</string>
    <string name="choose_image">Choose Image</string>
    
    <string name="id_banner">ca-app-pub-3940256099942544/6300978111</string>
    <string name="id_iterstitial">ca-app-pub-3940256099942544/1033173712</string>
</resources>
