<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:padding="@dimen/_12sdp">

            <ImageView
                android:id="@+id/img_warning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/_32sdp"
                android:src="@drawable/ic_warning" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/_8sdp"
                android:layout_toEndOf="@+id/img_warning"
                android:text="@string/alert"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_18sdp"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_150sdp"
            android:padding="@dimen/_22sdp">


            <Button
                android:id="@+id/btn_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:background="@color/colorPrimary"
                android:text="@string/save"
                android:textColor="@color/colorWhite" />

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="@dimen/_12sdp"
                android:layout_toStartOf="@+id/btn_save"
                android:background="@color/colorPrimary"
                android:text="@string/cancel"
                android:textColor="@color/colorWhite" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ques_save"
                android:textSize="@dimen/_12sdp" />

        </RelativeLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>