<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundDark">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_8sdp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/rl_camera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_camera">

                <ImageView
                    android:layout_width="@dimen/_32sdp"
                    android:layout_height="@dimen/_32sdp"
                    android:layout_centerInParent="true"
                    android:layout_marginHorizontal="@dimen/_24sdp"
                    android:layout_marginVertical="@dimen/_16sdp"
                    android:src="@drawable/ic_camera" />
            </RelativeLayout>

            <ImageButton
                android:id="@+id/btn_share"
                android:src="@drawable/ic_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:layout_marginTop="@dimen/_24sdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/share_app"
                android:textColor="@color/colorWhite" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_8sdp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/rl_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_photo">

                <ImageView
                    android:layout_width="@dimen/_32sdp"
                    android:layout_height="@dimen/_32sdp"
                    android:layout_centerInParent="true"
                    android:layout_marginHorizontal="@dimen/_24sdp"
                    android:layout_marginVertical="@dimen/_16sdp"
                    android:src="@drawable/ic_photos" />
            </RelativeLayout>

            <ImageButton
                android:src="@drawable/ic_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_more"
                android:background="@null"
                android:layout_marginTop="@dimen/_24sdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/more"
                android:textColor="@color/colorWhite" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_8sdp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/rl_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_list">

                <ImageView
                    android:layout_width="@dimen/_32sdp"
                    android:layout_height="@dimen/_32sdp"
                    android:layout_centerInParent="true"
                    android:layout_marginHorizontal="@dimen/_24sdp"
                    android:layout_marginVertical="@dimen/_16sdp"
                    android:src="@drawable/ic_list" />
            </RelativeLayout>

            <ImageButton
                android:src="@drawable/ic_rate"
                android:background="@null"
                android:id="@+id/btn_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_24sdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rate_app"
                android:textColor="@color/colorWhite" />
        </LinearLayout>


    </LinearLayout>
</RelativeLayout>